--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title></title>
+    <title>Email Draft Duplicator Terms of Service</title>
     <link href="style.css" rel="stylesheet">
-    <meta name="google-site-verification" content="mexeeM2fWU6OCYIhb0TUIlam5egGW_yAOHLeFhZx4Mw" />
 </head>
 <body>
 <section>
